<resources>
    <string name="app_name">Trivia</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ques1">Who is the best cricketer in the world?</string>
    <string name="opt1">Sachin Tendulkar</string>
    <string name="opt2">Virat Kolli</string>
    <string name="opt3">Adam Gilchirst</string>
    <string name="opt4">Jacques Kallis</string>
    <string name="next">NEXT</string>
    <string name="ques2">What are the colors in the Indian national flag?</string>
    <string name="white">White</string>
    <string name="yellow">Yellow</string>
    <string name="orange">Orange</string>
    <string name="green">Green</string>
    <string name="summary">Summary</string>
    <string name="ans_hint">Here are the answers selected:</string>
</resources>
