<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Dashboard.QTwoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:layout_gravity="center"
        android:orientation="vertical">
        <TextView
            android:id="@+id/ques_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:text="@string/ques2"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"/>
       <CheckBox
           android:layout_marginTop="10dp"
           android:id="@+id/ck_white"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/white"/>
        <CheckBox
            android:id="@+id/ck_yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yellow"/>
        <CheckBox
            android:id="@+id/ck_orange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orange"/>
        <CheckBox
            android:id="@+id/ck_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/green"/>

        <Button
            android:id="@+id/next_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>