<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Dashboard.QOneFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:layout_gravity="center"
        android:orientation="vertical">
        <TextView
            android:id="@+id/q1Ques"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/ques1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"/>
        <RadioGroup
            android:id="@+id/radio_q1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <RadioButton
                android:id="@+id/opt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opt1"
                android:checked="true" />

            <RadioButton
                android:id="@+id/opt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opt2" />
            <RadioButton
                android:id="@+id/opt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opt3"
                android:checked="true" />

            <RadioButton
                android:id="@+id/opt4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opt4" />

        </RadioGroup>

        <Button
            android:id="@+id/next_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>